Correcting a spacing issue in the question section

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -343,6 +343,7 @@ a.high-scores-button:hover {
 
 #quiz-display {
     width: 90%;
+    margin-top: 60px;
 
 }
 
